--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,10 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - Day1.qmd
+      - Day2.qmd
+      - Day3.qmd
+      - Day4.qmd
 
 format:
   html:
